--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="#fitness">Fitness</a></li>
                     <li><a href="#nutricion">Nutricion</a></li>
                     <li><a href="#belleza">Belleza</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="#productos-seccion">Nuestros Productos</a></li>
                     <li> <a href="carrito.html">  <span id="contador-carrito">0</span> </a> </li>
                 </ul>
@@ -29,7 +29,7 @@
         <main>
             <section id="inicio">
                 <h2>Bienvenidos</h2>
-                <img src="imagen-principal.jpg" alt="imagen-principal" width="1100px" height="350px">
+                <img src="imagen-principal.jpg" alt="imagen-principal" width="900px" height="350px">
                 <p>Somos una plataforma online dedicada a empoderarte en tu camino hacia una vida más saludable, activa y radiante. En Vida Plena, creemos que el bienestar es un viaje integral que abarca el cuerpo, la mente y el espíritu. Por eso, te ofrecemos información confiable, consejos prácticos y una comunidad de apoyo en los pilares fundamentales del fitness, la nutrición y la belleza.
 
                     En "Vida Plena: Tu Guía Esencial", estamos comprometidos a ser tu compañero de confianza en este emocionante viaje hacia una vida más plena y saludable. ¡Explora nuestros contenidos, únete a nuestra comunidad y comienza a transformar tu bienestar hoy mismo!
@@ -70,24 +70,7 @@
                 <div id="productos-contenedor"></div>
             </section>
 
-            <section id="contacto">
-                <h2>Contacto</h2>
-                <form action="https://formspree.io/f/meonaovw" method="POST" data-formspree>
-                    
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre" name="nombre" required>
 
-                    <label for="correo">Correo electrónico:</label>
-                    <input type="email" id="correo" name="correo" required>
-                    <br></br>
-
-                    <label for="mensaje">Mensaje:</label>
-                    <textarea id="mensaje" name="mensaje" required></textarea>
-                    <br></br>
-
-                    <button type="submit">Enviar</button>
-                </form>
-            </section>
         </main>
 
         <footer>
