Enhance footer design and functionality across multiple HTML files, adding social media links and promotional content.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Proyecto Flexbox Responsive</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f7d5cff221.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -74,10 +75,31 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 VidaPlena:"Tu Guia Esencial</p>
+            <div id="publicidad-footer">
+                <p>¡Anúnciate aquí! Oferta especial: Curso de Yoga 🧘‍♀️</p>
+                </div>
+            
+            <div id="footer-content">
+                <p>&copy; 2025 VidaPlena: "Tu Guia Esencial"</p>
+                
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/" target="_blank" aria-label="Síguenos en Facebook">
+                        <i class="fab fa-facebook" style="color: #74C0FC;"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" aria-label="Síguenos en Instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://twitter.com/" target="_blank" aria-label="Síguenos en Twitter">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank" aria-label="Mira nuestro canal de YouTube">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </div>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js"> </script>
 </body>
 
 </html>
