--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/f7d5cff221.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="contacto">
@@ -25,6 +26,21 @@
                     <button type="submit">Enviar</button>
                 </form>
     </section>
-              
+    <footer>
+            <div class="footer-content">
+                <p>&copy; 2024 Vida Plena. Todos los derechos reservados.</p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/" target="_blank" aria-label="Síguenos en Facebook">
+                        <i class="fab fa-facebook" style="color: #74C0FC;"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" aria-label="Síguenos en Instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank" aria-label="Síguenos en Twitter">
+                        <i class="fab fa-twitter" style="color: #74C0FC;"></i>
+                    </a>
+                </div>
+            </div>
+    </footer>   
 </body>
 </html>
