Update fitness, nutrition, and beauty sections with links for improved navigation

--- a/index.html
+++ b/index.html
@@ -39,30 +39,52 @@
 
             <section id="fitness">
                 <h2>Fitness</h2>
-                <ul>
-                    <li>Rutinas Personalizadas</li>
-                    <li>Guias sobre Tecnicas Correctas</li>
-                    <li>Motivacion Constante</li>
-                    <li>Informacion sobre diversas Diciplinas</li>
-                </ul>
+            <ul>
+                <li>
+                <a href="#rutinas-personalizadas">Rutinas Personalizadas</a>
+                </li>
+                <li>
+                <a href="https://www.simplyfitness.com">Guías sobre Técnicas Correctas</a>
+                </li>
+                <li>
+                <a href="#motivacion-fitness">Motivación Constante</a>
+                </li>
+                <li>
+                <a href="#disciplinas-varias">Información sobre diversas Disciplinas</a>
+                </li>
+            </ul>
             </section>
 
             <section id="nutricion">
                 <h2>Nutricion</h2>
                 <ul>
-                    <li>Recetas Saludables y Deliciosas</li>
-                    <li>sobre Macronutrientes y Micronutrientes</li>
-                    <li>Consejos para una Alimentacion Consciente</li>
-                    <li>Mitos y Verdades Sobre las Dietas</li>
+                    <li>
+                    <a href="#recetas-saludables">Recetas Saludables y Deliciosas</a>
+                    </li>
+                    <li>
+                    <a href="#info-nutrientes">Macronutrientes y Micronutrientes</a>
+                    </li>
+                    <li>
+                    <a href="#alimentacion-consciente">Consejos para una Alimentación Consciente</a>
+                    </li>
+                    <li>
+                    <a href="#mitos-dietas">Mitos y Verdades Sobre las Dietas</a>
+        <           </li>
                 </ul>
             </section>
             
             <section id="belleza">
                 <h2>Belleza</h2>
                 <ul>
-                    <li>maquillaje paratodo tipo de piel</li>
-                    <li>mascarillas faciales</li>
-                    <li>cremas corporales naturales</li>
+                    <li>
+                    <a href="#maquillaje-tipos">Maquillaje para todo tipo de piel</a>
+                    </li>
+                    <li>
+                    <a href="#mascarillas">Mascarillas faciales</a>
+                    </li>
+                    <li>
+                    <a href="#cremas-naturales">Cremas corporales naturales</a>
+                    </li>
                 </ul>
             </section>
 
