Add navigation links to contacto page and enhance styles for mental health and skincare sections

--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,16 @@
     <script src="https://kit.fontawesome.com/f7d5cff221.js" crossorigin="anonymous"></script>
 </head>
 <body>
+      <header>
+            <h1>Vida Plena: "Tu Guia Esencial"</h1> 
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="carrito.html">Carrito de Compras</a></li>
+                <</ul>
+            </nav>
+    </header>
+
     <section id="contacto">
       <h2>Contacto</h2>
                 <form action="https://formspree.io/f/meonaovw" method="POST" data-formspree>
