Add header title to carrito page for improved branding

--- a/carrito.html
+++ b/carrito.html
@@ -10,6 +10,7 @@
 <body>
     <div class="layout">
         <header>
+            <h1>Vida Plena: "Tu Guia Esencial"</h1> 
             <nav>
                 <ul>
                     <li><a href="index.html">🛍️ Inicio</a></li>
