se agregaron y modificaron  caracteristicas de los archivos

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             </section>
 
             <section id="nutricion">
-                <h2>Nutricion</h2>
+                <a href="index.html""><h2>Nutricion</h2></a>
                 <ul>
                     <li>
                     <h3 id="recetas">Recetas Saludables y Deliciosas</h3>
@@ -727,13 +727,14 @@
             </tr>
         </tbody>
     </table>
-    
+
                 </ul>
             </section>
 
             <section id="productos-seccion"> 
                 <h2>Nuestros Productos</h2>
                 <div id="productos-contenedor"></div>
+                <a href="carrito.html" class="boton-carrito">Ir al Carrito de Compras</a>
             </section>
 
 
