Actualizacion de css, index y script.Se añadió botón ir al carrito en cada tarjeta de producto

--- a/carrito.html
+++ b/carrito.html
@@ -15,6 +15,7 @@
                 <ul>
                     <li><a href="index.html">🛍️ Inicio</a></li>
                     <li><a href="contacto.html">📞 Contacto</a></li>
+                    <li><a href="index.html#productos-seccion">🛒 Nuestros Productos</a></li>
                 </ul>
                 <p>Carrito (<span id="contador-carrito">0</span>)</p>
             </nav>
@@ -31,7 +32,7 @@
             <section id="resumen-carrito">
     </section>
 
-<div id="formulario-compra" style="display:none; margin-top: 20px; padding: 20px; background-color: #f7f7f7; border: 1px solid #ddd; border-radius: 8px;">
+<div id="formulario-compra" style="display:none; margin-top: 20px; padding: 20px; background-color: #eef7c9; border: 2px solid #04c204; border-radius: 8px;">
     <h3>Datos para la Facturación y Envío</h3>
     <form id="form-finalizar-compra" action="https://formspree.io/f/meonaovw" method="POST">
         <div style="margin-bottom: 10px;">
@@ -91,7 +92,7 @@
             <h3>✅ Compra Procesada con Éxito</h3>
             
             <p style="color:#d32f2f; font-weight: bold;">
-                NOTIFICACIÓN AL VENDEDOR:
+                NOTIFICACIÓN ENVIADA AL VENDEDOR:
             </p>
 
             <div class="cliente-datos">
