--- a/contacto.html
+++ b/contacto.html
@@ -51,6 +51,7 @@
                     </a>
                 </div>
             </div>
-    </footer>   
+    </footer> 
+    <script src="auth.js"></script>  
 </body>
 </html>
